--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,4 +1,4 @@
-[phases]
+[phases.install]
 # Install Templ and TailwindCSS in the install phase
 install = "go install github.com/a-h/templ/cmd/templ@latest && curl -L https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.4/tailwindcss-linux-x64 -o /usr/local/bin/tailwindcss && chmod +x /usr/local/bin/tailwindcss"
 
